<resources>
    <string name="app_name" translatable="false">Strong</string>
    <string name="title_activity_main_bn" translatable="false">MainBN</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="a_un_paso_de_alcanzar_la_vida_que_siempre_has_deseado" translatable="false">A un paso de alcanzar la vida que siempre has deseado</string>
    <string name="acceder">ACCEDER</string>
    <string name="entrar_como_invitado">ENTRAR COMO INVITADO</string>
    <string name="registro">REGISTRO</string>
    <string name="aceptar">Aceptar</string>
    <string name="sobre_ti">Sobre ti</string>
    <string name="string_soy_sedentario">Soy sedentario</string>
    <string name="introduzca_sus_datos">Introduzca sus datos</string>
    <string name="volver_atras">Volver Atrás</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvidaste_tu_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="strong" translatable="false">STRONG</string>
    <string name="repite_contrasenia">Repite contraseña</string>
    <string name="volver_al_login">VOLVER AL LOGIN</string>
    <string name="hola">Hola,</string>
    <string name="nombreusuario">NombreUsuario</string>
    <string name="peso_ideal_recomendado">Peso ideal recomendado</string>
    <string name="pasos_diarios_recomendados">Pasos diarios recomendados</string>
    <string name="kcal_diarias_recomendadas">Kcal diarias recomendadas</string>
    <string name="fondo">fondo</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="email">Email</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="soy_activo">Soy activo</string>
    <string name="soy_principiante">Soy principiante</string>
    <string name="entreno_habitualmente">Entreno habitualmente</string>
    <string name="soy_sedentario">Soy Sedentario</string>
    <string name="guardar">Guardar</string>
    <string name="todo">TODO</string>
    <string name="pagina_de_recuperacion_de_contrase_a">Pagina de Recuperación de contraseña</string>
    <string name="entreno_habitualmente1">Entreno habitualmente</string>
</resources>