<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imangeiniciosesion">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant"></View>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaIzd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textView"
        style="@style/estiloTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintStart_toStartOf="@+id/lineaIzd"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="314dp"
        android:layout_height="59dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/aeonikbold"
        android:gravity="start"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/blancoApp"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lineaIzd"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lineaIzd"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/emailSesion"
            style="@style/editText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lineaIzd"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <EditText
            android:id="@+id/passwordSesion"
            style="@style/editText"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:onClick="passOlvidada"
        android:text="@string/olvidaste_tu_contrasenia"
        android:textColor="@color/blancoApp"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <Button
        android:id="@+id/accederAlHome"
        style="@style/botonVerde"
        android:layout_marginTop="46dp"
        android:text="@string/acceder"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintStart_toStartOf="@+id/lineaIzd"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/accionRegistrarse"
        style="@style/botonNegro"
        android:layout_marginTop="20dp"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toStartOf="@+id/lineaDerecha"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/lineaIzd"
        app:layout_constraintTop_toBottomOf="@+id/accederAlHome" />


</androidx.constraintlayout.widget.ConstraintLayout>